--- a/Todo-app/Todo.css
+++ b/Todo-app/Todo.css
@@ -46,7 +46,7 @@ header p {
   padding: 20px 25px;
   display: flex;
   gap: 10px;
-  background-color: var(--light);
+  background-color: white;
   border-bottom: 1px solid grey;
 }
 
@@ -83,7 +83,7 @@ header p {
 .filters {
   display: flex;
   gap: 15px;
-  border-bottom: 1px solid var(--border);
+  border-bottom: 1px solid grey;
   padding: 15px 25px;
 }
 
@@ -100,7 +100,7 @@ header p {
 }
 
 .filter.active {
-  color: var(--primary);
+  color: #9775fa;
   border-bottom: 2px solid purple;
   font-weight: 500;
 }
@@ -216,7 +216,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 15px 25px;
-  border-top: 1px solid var(--border);
+  border-top: 1px solid grey;
   background-color: white;
   font-size: 14px;
 }
